# Mantyx

./: .bandit  .deploy.env.example  .editorconfig  .env.example  .gitignore  .markdownlintrc  .pre-commit-config.yaml  APP_PACKAGING.md  CI_FIXES_SUMMARY.md  CONTRIBUTING.md  DEBUGGING_APPS.md  DEPLOYMENT.md  IMPLEMENTATION.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP_SUMMARY.md  UPDATE_GUIDE.md  deploy.sh  mantyx.service  prompt.md  pyproject.toml  requirements.txt
.github/: PRE_COMMIT_GUIDE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/hello-world/: README.md  main.py  requirements.txt
examples/scheduled-report/: main.py
examples/weather/: weather_fetch.py
migrations/: README.md  add_update_fields.py
scripts/: QUICK_REFERENCE.md  README.md  check-env.sh  setup-dev.sh
src/mantyx/: __init__.py  app.py  cli.py  config.py  database.py  logging.py
src/mantyx/api/: __init__.py  apps.py  executions.py  schedules.py  schemas.py  settings.py
src/mantyx/core/: __init__.py  app_manager.py  scheduler.py  supervisor.py  venv_manager.py
src/mantyx/models/: __init__.py  app.py  base.py  execution.py  log.py  schedule.py  setting.py
src/mantyx/web/: index.html
src/mantyx/web/static/css/: style.css
src/mantyx/web/static/js/: main.js
tests/: README.md  __init__.py  conftest.py  test_models.py
