[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mantyx"
version = "0.1.0"
description = "A locally hostable Python app management framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mantyx Team" }]
keywords = ["orchestration", "python", "apps", "scheduler", "supervisor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "gitpython>=3.1.0",
    "jinja2>=3.1.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
mantyx = "mantyx.cli:main"

[project.urls]
Homepage = "https://github.com/Thulrus/Mantyx"
Repository = "https://github.com/Thulrus/Mantyx"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults (FastAPI Depends pattern)
    "B904", # raise from - would require refactoring all exception handlers
    "B025", # duplicate exception - will fix incrementally
]
[tool.ruff.lint.per-file-ignores]
"migrations/*.py" = [
    "E402",
] # Module level imports not at top (needed for path manipulation)
"src/mantyx/core/app_manager.py" = [
    "F841",
] # Unused variables (planned for future use)
"src/mantyx/core/scheduler.py" = [
    "E712",
] # Boolean comparison (SQLAlchemy pattern)
"src/mantyx/core/supervisor.py" = [
    "E712",
] # Boolean comparison (SQLAlchemy pattern)
[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=mantyx",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
